# dst_autobackup

./: README.md  config.json  pyproject.toml
scripts/: console.py
src/: app.py  utils.py
src/libs/: JsonFileManager.py  PowerShellManager.py
