[tool.poetry]
name = "autosave"
version = "0.1.0"
description = ""
authors = ["smith <gomes.bruno201@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
nuitka = "^2.3"

[tool.poetry.scripts]
start = "scripts.console:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
